--- a/WinGPT.App/MainWindow.xaml
+++ b/WinGPT.App/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WinGPT.App"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="1000"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        Title="WinGPT 0.1" Height="700" Width="1000"
+        Icon="WinGPTLogo.ico"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
+        xmlns:heightConverter="clr-namespace:WinGPT.App.Converters"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
@@ -14,10 +16,13 @@
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}">
-    <Grid>
+    <Window.Resources>
+        <heightConverter:ScrollViewerHeightConverters x:Key="ScrollViewerHeightConverters" />
+    </Window.Resources>
+    <Grid x:Name="mainGrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="13*"/>
+            <RowDefinition Height="50px"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <materialDesign:ColorZone
             Padding="4"
@@ -31,7 +36,7 @@
                     <Button
                         Margin="8,0,0,0"
                         Panel.ZIndex="0"
-                        Style="{StaticResource MaterialDesignFlatAccentButton}">
+                        Style="{StaticResource MaterialDesignFlatAccentButton}" Click="Button_Click">
                         <materialDesign:PackIcon Kind="Twitter" />
                     </Button>
                 </StackPanel>
@@ -40,31 +45,90 @@
         <StackPanel 
             Grid.Row="1" 
             VerticalAlignment="Bottom"
-            Margin="16">
-            <materialDesign:Card>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="20*"/>
-                        <ColumnDefinition Width="1*"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBox
-                        Height="auto"
-                        MaxHeight="100"
-                        Grid.Column="0"
-                        VerticalAlignment="Top"
-                        materialDesign:HintAssist.Hint="Message"
-                        materialDesign:ColorZoneAssist.Mode="SecondaryLight"
-                        
-                        Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                        TextWrapping="Wrap"
-                        VerticalScrollBarVisibility="Auto" />
-                    <Button
-                        Grid.Column="1"
-                        Style="{StaticResource MaterialDesignFlatAccentButton}">
-                        <materialDesign:PackIcon Kind="Send" />
-                    </Button>
-                </Grid>
-            </materialDesign:Card>
+            Margin="16, 0, 16 , 16">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="10*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <ScrollViewer 
+                    VerticalScrollBarVisibility="Visible"
+                    MaxHeight="{Binding ElementName=mainGrid, Path=ActualHeight, Converter={StaticResource ScrollViewerHeightConverters}}"
+                    x:Name="scrollerViewEl"
+                    Grid.Row="0">
+                    <StackPanel>
+                        <Grid x:Name="messageHistory" VerticalAlignment="Bottom">
+                            <Grid.RowDefinitions>
+                            </Grid.RowDefinitions>
+                        </Grid>
+                        <Grid>
+                            <materialDesign:Card
+                                x:Name="thinkingBar"
+                                Margin="0, 0, 150, 0"
+                                Visibility="Hidden"
+                                Padding="10"
+                                HorizontalAlignment="Left"
+                                MaxHeight="100"
+                                Background="Transparent"
+                                >
+                                <TextBlock 
+                                    x:Name="thinkingBarText"
+                                    FontStyle="Italic" 
+                                    Text="{Binding Status}">
+                                    <TextBlock.Style>
+                                        <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource MaterialDesignCaptionTextBlock}">
+                                            <Style.Triggers>
+                                                <EventTrigger RoutedEvent="TextBlock.Loaded">
+                                                    <BeginStoryboard Name="animationRefresh">
+                                                        <Storyboard>
+                                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Text"
+                                                                    Duration="00:00:02.0" 
+                                                                    RepeatBehavior="Forever">
+                                                                <DiscreteObjectKeyFrame KeyTime="00:00:00.00" Value="Thinking   "/>
+                                                                <DiscreteObjectKeyFrame KeyTime="00:00:00.40" Value="Thinking.  "/>
+                                                                <DiscreteObjectKeyFrame KeyTime="00:00:00.80" Value="Thinking.. "/>
+                                                                <DiscreteObjectKeyFrame KeyTime="00:00:01.20" Value="Thinking..."/>
+                                                                <DiscreteObjectKeyFrame KeyTime="00:00:01.60" Value="Thinking...."/>
+                                                            </ObjectAnimationUsingKeyFrames>
+                                                        </Storyboard>
+                                                    </BeginStoryboard>
+                                                </EventTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
+                            </materialDesign:Card>
+                        </Grid>
+                    </StackPanel>
+                </ScrollViewer>
+                <materialDesign:Card Grid.Row="1">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="20*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox
+                            x:Name="messageBox"
+                            Height="auto"
+                            MaxHeight="100"
+                            Grid.Column="0"
+                            VerticalAlignment="Top"
+                            materialDesign:HintAssist.Hint="Message"
+                            materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
+                            BorderThickness="0"
+                            Padding="12"
+                            TextWrapping="Wrap"
+                            VerticalScrollBarVisibility="Auto" />
+                        <Button
+                            Grid.Column="1"
+                            x:Name="SendMessage"
+                            Height="auto"
+                            Style="{StaticResource MaterialDesignFlatAccentButton}" Click="SendMessage_Click">
+                            <materialDesign:PackIcon Kind="Send" />
+                        </Button>
+                    </Grid>
+                </materialDesign:Card>
+            </Grid>
         </StackPanel>
     </Grid>
 </Window>
