--- a/WinGPT.App/MainWindow.xaml
+++ b/WinGPT.App/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:WinGPT.App"
     mc:Ignorable="d"
-    Title="WinGPT 0.1" Height="700" Width="1000"
+    Title="WinGPT 0.1" Height="700" Width="1000" MinHeight="625" MinWidth="625"
     Icon="WinGPTLogo.ico"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:heightConverter="clr-namespace:WinGPT.App.Converters"
@@ -21,44 +21,56 @@
     </Window.Resources>
     <materialDesign:DialogHost
         x:Name="dialog"
-        DialogTheme="Inherit">
+        DialogTheme="Inherit"
+        Style="{StaticResource MaterialDesignEmbeddedDialogHost}">
         <materialDesign:DialogHost.DialogContent>
             <StackPanel
-                Height="360"
+                Height="425"
                 Width="500"
                 Margin="24, 8, 24, 8">
                 <TextBlock
                     Text="Create Configurations"
                     Style="{StaticResource MaterialDesignHeadline5TextBlock}"/>
-                <TextBox
+                <ComboBox
                     x:Name="Model"
                     materialDesign:HintAssist.Hint="Model"
-                    Margin="0, 20, 0, 10"
-                    Style="{StaticResource MaterialDesignOutlinedTextBox}" />
+                    Style="{StaticResource MaterialDesignOutlinedComboBox}">
+                    <ComboBox.SelectedItem>
+                        <Binding
+                            Mode="OneTime"
+                            Path="Model"
+                            UpdateSourceTrigger="PropertyChanged">
+                            <Binding.ValidationRules>
+                                <inputValidation:NotEmptyValidationRule
+                                    ValidatesOnTargetUpdated="True" xmlns:inputValidation="clr-namespace:WinGPT.App.Validators" />
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </ComboBox.SelectedItem>
+                </ComboBox>
                 <TextBox
                     x:Name="MaxTokens"
                     materialDesign:HintAssist.Hint="Max Tokens"
                     materialDesign:HintAssist.HelperText="Value between 1-2048/4096 depending on model"
-                    Margin="0, 10, 0, 10"
+                    Margin="0, 18, 0, 18"
                     Style="{StaticResource MaterialDesignOutlinedTextBox}" />
                 <PasswordBox
                     x:Name="OpenAIAPIKey"
                     materialDesign:HintAssist.Hint="Open AI API Key"
-                    Margin="0, 10, 0, 10"
+                    Margin="0, 18, 0, 18"
                     Style="{StaticResource MaterialDesignOutlinedPasswordBox}" />
                 <TextBox
                     x:Name="OpenAIOrganizationId"
                     materialDesign:HintAssist.Hint="Open AI Organization Id"
-                    Margin="0, 10, 0, 20"
+                    Margin="0, 18, 0, 25"
                     Style="{StaticResource MaterialDesignOutlinedTextBox}" />
                 <StackPanel
                     HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
                     Orientation="Horizontal">
                     <Button
-                        Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
                         Content="Save"
                         IsDefault="True"
+                        IsEnabled="{Binding Mode=OneWay, Source=EnableSave}"
                         Click="SaveButton_Click"
                         Style="{StaticResource MaterialDesignFlatButton}">
                     </Button>
@@ -177,6 +189,7 @@
                                     VerticalAlignment="Top"
                                     materialDesign:HintAssist.Hint="Message"
                                     materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
+                                    KeyUp="messageBox_OnEnter"
                                     BorderThickness="0"
                                     Padding="12"
                                     TextWrapping="Wrap"
